--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script src="./app.js" defer></script>
 </head>
 <body>
-    <h2><center>Hello OOP</center></h2>
+    <h1 style="font-weight: 900;font-size: 40px;"><center>Hello OOP</center></h1>
 </body>
 </html>
